[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Worlds/World.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/Worlds/BGScroller.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Worlds/PlatformSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Platforms/StandardPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Platforms/MovingLeftPlatform.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Platforms/BreakablePlatform.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Platforms/SpikePlatform.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Platforms/MovingRightPlatform.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Spike.png" type="Texture" id=11]
[ext_resource path="res://Sprites/HUD_BUTTONS_1/sprite_11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/HUD_BUTTONS_1/sprite_10.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 293.849, 52.4502 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
scale = Vector2( 1, 1.067 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 480, 800 )
script = ExtResource( 3 )

[node name="PlatformSpawner" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 240, 930 )
script = ExtResource( 4 )
platforms = [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ) ]

[node name="Timer" type="Timer" parent="PlatformSpawner"]
one_shot = true

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 240, 186.6 )

[node name="SpikesBlock" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D" type="Area2D" parent="SpikesBlock"]
editor/display_folded = true
position = Vector2( 217.6, 23.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -246.057, 14.9411 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -206.057, 14.9411 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -166.057, 14.9411 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -124.986, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -84.986, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -44.986, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite9" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( -4.98599, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite8" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 35.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite10" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 75.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite11" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 115.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite12" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 155.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite13" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 195.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite14" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 235.014, 14.9412 )
texture = ExtResource( 11 )

[node name="Sprite15" type="Sprite" parent="SpikesBlock/StaticBody2D"]
position = Vector2( 275.014, 14.9412 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikesBlock/StaticBody2D"]
shape = SubResource( 1 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 360, 700 )
normal = ExtResource( 12 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 0, 700 )
normal = ExtResource( 13 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 854.0

[node name="Score" type="Label" parent="Control"]
margin_left = 24.0
margin_top = 87.0
margin_right = 154.0
margin_bottom = 111.0
text = "Score: 0"

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="PlatformSpawner/Timer" to="PlatformSpawner" method="_on_Timer_timeout"]
[connection signal="body_entered" from="SpikesBlock/StaticBody2D" to="." method="_on_StaticBody2D_body_entered"]
[connection signal="pressed" from="Right" to="Player" method="_on_Right_pressed"]
[connection signal="released" from="Right" to="Player" method="_on_Right_released"]
[connection signal="pressed" from="Left" to="Player" method="_on_Left_pressed"]
[connection signal="released" from="Left" to="Player" method="_on_Left_released"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
